fixed qa bug, login redirect, logo z-index.

--- a/public/fullpage/admin/css/dashboard.css
+++ b/public/fullpage/admin/css/dashboard.css
@@ -12,6 +12,9 @@ body, #mainWrapper, #fadedContainer{
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
     margin-top:10px;
 }
+#theDashboardMenu{
+    z-index: 300;
+}
 #theDashboardMenu ul{
     display:block;
     background:url(../img/dashboard-menu-bg.jpg) repeat-x;
